<resources>
    <string name="app_name">Лисёнок-Повaренок</string>
    <string name="hello_slide1">Лисёнок-Повaренок</string>
    <string name="title_activity_nov">От 7 до 14</string>
    <string name="title_tb">Т/Б</string>
    <string name="title_General">Основы</string>
    <string name="title_recipe">Рецепты</string>
    <string name="title_zad">Задания</string>
    <string name="description">Привет! Я-"Лисенок-Поворенок",твой личный учитель. Я сделаю из тебя настоящего повара за пару шагов! Все что нужно от тебя-это желание!</string>
    <string name="description2">Лисенок-Поворенок-специальное приложение для детей, которое обучит всем основам кулинарии. В нем ты узнаешь о базовых вещах в готовке, технике безопасности, правилах этикета за столом и о многом другом.</string>
    <string name="tb">Привет!</string>
    <string name="tblis">Я-Лисенок-Поворенок!</string>
    <string name="tb1">Я тебя научу всем основам кулинарии!В следующих разделах мы стобой узнаем о том, какие существуют кухонные приборы, о горячих блюдах, гарнирах, салатах и десертах. Ты научишься самостоятельно готовить без помощи родителей!</string>
    <string name="tbtb">Давай начнем с техники безопасности!</string>
    <string name="tbogog">Что делать если у тебя ожог?</string>
    <string name="tbogog1">1. Держи место ожога под холодной водой 5 минут. Не волнуйся! Я буду с тобой!</string>
    <string name="tbogog2">2. НЕ ТРОГАЙ обожженый участок руками. </string>
    <string name="tbogog3">3. Сними одежду, если она не открывает ожог или соприкасается с ним. Но не отдирай ткань, если она приклеилась.</string>
    <string name="tbogog4">4. Накрой ожог влажной холодной марлей</string>
    <string name="tbogog5">5. Позови на всякий случай кого-нибудь из родителей</string>
    <string name="tbpogar">Что делать при пожаре?</string>
    <string name="tbpogar1">1. Сообщи о пожаре в пожарную охрану по телефонам «112», «01» (с сотового тел. 01, 112).</string>
    <string name="tbpogar2">2. Если нет рядом электроприборов, то приступай к тушению пожара водой, или используй плотную мокрую ткань.</string>
    <string name="tbpogar3">3. При пожаре ни в коем случае не открывай форточки и окна. </string>
    <string name="tbpogar4">4. Если не получается самому потушить огонь, выйди из квартиры, закрыв за собой дверь, и немедленно сообщи о пожаре соседям и жильцам выше-ниже находящихся квартир.</string>
    <string name="tbend">Молодец! Теперь ты знаешь что нужно делать в самых чрезвычайных ситуациях на кухне!</string>
    <string name="tbend1">Нажимай на галочку внизу и мы начнем готовить! </string>
    <string name="abcend">Ты можешь проверить насколько хорошо ты запомнил приборы в последнем разделе! Просто нажми на ключик!</string>
    <string name="abcend1">Если ты выучил названия всех приборов, нажимай на кнопочку и идем дальше!</string>
    <string name="tbmid">Если ты в этом разделе, значит тебе 14 или больше лет! Прочитай технику безопасности и пойдем дальше!</string>
    <string name="tbmid1">Молодец! Ты ознакомился с техникой безопасности и теперь мы можем двигаться дальше!</string>
    <string name="tbmid2"> Во втором разделе тебя ждут полезные советы! В разделе рецепты ты найдешь нужный для тебя рецепт! В разделе с ключиком тебя ждет небольшая игра!</string>
    <string name="abcmid">В этом разделе ты можешь посмотреть все полезные советы, которые тебе могут пригодиться во время готовки.</string>
    <string name="abcmid1">Полезные советы</string>
    <string name="zadmid">Соревнуйтесь с напарником, кто последний дойдет до 50, тот и готовит обед!</string>
    <string name="abcmid2">1. Для того чтобы мясо не подгорало в духовке, поставь на нижнюю решетку жаропрочную стеклянную форму.</string>
    <string name="abcmid3">2. Солить и перчить салат нужно до того, как ты добавишь в него растительное масло.</string>
    <string name="abcmid4">3. Упрости очистку вареных яиц.Добавь соду или уксус в воду при варке яиц. Оба вещества проникают внутрь скорлупы и облегчают отделение от белка.</string>
    <string name="abcmid5">4. Как легко натереть мягкий сыр? Перед натиранием помести сыр в морозилку на 30 минут. Затвердевший сыр не будет прилипать к терке и станет более рассыпчатым.</string>
    <string name="abcmid6">5. Чтобы не ждать, пока вода, в которой готовятся макароны, закипит, или не проглядеть ее, помести поверх кастрюли деревянную лопаточку или ложку. Дерево не позволит поднявшейся пене перелиться через край.</string>
    <string name="abcmid7">6. Чтобы избавить свои руки от навязчивого запаха лука или чеснока, используй лимон или пищевую соду. Просто натри ими руки и смой водой.</string>
    <string name="abcmid8">7. Просто присыпь зелень солью и тогда ее будет проще нарезать ( но не переборщи с солью).</string>
    <string name="abcmid9">8. Очищенные яблоки не потемнеют, если их положить в воду, в которую добавили лимонный сок.</string>
    <string name="abcmid10">9.Рис не разварится и не склеится, если воду, в которой он варится, добавить пару ложек холодного молока.</string>
    <string name="abcmid11">10.Если нужно сварить картофель быстрее – добавьте в кипящую воду немного сливочного масла.</string>
    <string name="abcmid12">11.Если вареные яйца надо нарезать тонкими аккуратными дольками, чтобы желток не раскрошился, следует смочить нож в холодной воде.</string>
    <string name="abcmid13">12.Разбивайте яйца о плоскую поверхность, чтобы желтки оставались целыми, к примеру, о разделочную доску, а не о край тарелки или чашки.</string>
    <string name="abcmid14">13.Свежую зелень (петрушку, укроп, базилик, кинзу) можно хранить, как цветы: поставить в стакан с водой и держать на кухонном столе. Это и красиво, и позволит травам протянуть на пару дней больше, чем в холодильнике.</string>
    <string name="abcmid15">14.Каждый раз, когда включаете духовку, подумайте, что ещё можно запечь одновременно с основным блюдом. Места ведь внутри полно, почему бы не приготовиться сразу два блюда?</string>
    <string name="abcmid16">15.Горячие блюда, которые перекладываются в холодные тарелки, тут же теряют свою свежесть. Нагрейте тарелки в духовке при температуре 65 градусов в течение 10 минут, увидите существенную разницу. С другой стороны, салаты лучше подавать на холодных тарелках. Для этого их необходимо немного подержать в морозилке.</string>
    <string name="abcmid17">16. Никогда не храните в холодильнике помидоры, персики, картофель, лук, чеснок, хлеб и кофе — холодная температура убивает вкус и текстуру этих продуктов.</string>
    <string name="abcmid18">17. Переварили мясо? Не беда. Нарежьте его тонкими ломтиками, положить на тарелку и посыпьте помидорами и луком. Добавьте немного оливкового масла, лимонного сока и уксуса — мясо вернёт утраченную влагу и жирность.</string>
    <string name="abcmid19">18. Для определения свежести яиц поместите их в глубокую ёмкость с холодной водой. Если они остались лежать на дне в горизонтальном положении, значит они очень свежие. Яйца, слегка приподнятые тупым углом кверху, – уже не первой свежести, но пока еще могут быть использованы в приготовлении горячих блюд. Всплывшие на поверхность яйца испорчены, и есть их нельзя! Рекомендуем вам поскорее избавиться от них.</string>
    <string name="abcmid20">19.Если вы хотите что то жарить на сливочном масле, вначале налейте на раскаленную сковородку немного растительного масла. И лишь затем кладите сливочное. Тогда оно сохранит свой вкус и аромат и не почернеет. </string>
    <string name="abcmid21">20.Овощи отваривать лучше в кожуре, и лишь потом чистить. Так сохраняется значительно больше полезных веществ.</string>
    <string name="abcmidend">С помощью этих советов тебе будет в сто раз легче готовить!</string>
    <string name="abcmidend1">Для того, чтобы что-нибудь приготовить, переходи в раздел Рецепты снизу.</string>
    <string name="tb2">

Перед использованием приложения вашим ребенком, прочтите пожалуйста правила:

Лучше некоторое время используйте приложение совместно с ребенком, если он у вас еще младше 10 лет.

Так же если у вас маленький ребенок, посмотрите какой рецепт он выбрал и какие приборы ему будут нужны: подготовьте все предметы самостоятельно, тем самым покажите ребенку где они лежат.

Нужно ограничить доступ малыша к кухонным принадлежностям, по возможности убирать электроприборы, которые не будут обходимы в приготовлении чего-либо.

Не забудьте убирать скатерть, малыш может случайно стянуть скатерть со стола, а вместе с ней и все, что сверху. Воспользуйтесь настольным ковриком или специальной подстилкой ( находящиеся сверху стола объекты должны прочно стоять.)

Огородите ребенка от розеток. Для розеток продаются специальные колпачки, которыми она затыкается.

Для ребенка особую опасность представляют острые углы, и, как уже упоминалось, это можно решить, купив мягкие накладки.

Важно также запереть все шкафчики, чтобы малыш не доставал оттуда вещи. Лучше выделите ему специальный ящик с безопасным для использования ребенком оборудования ( например, пластмассовая посуда и туповатые ножи из силикона).

Не следует оставлять ребенка долго без присмотра на кухне, даже если вы все уберете.

Если у вас электроплита, то нужно следить, чтобы ребенок не касался ее нагревательной поверхности даже если она выключена. Малыш не сможет определить включена она или нет и по привычке сунет туда руку, зная, что там не опасно, и получит серьезный ожог.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tb3">
        Прочитай обязательно что нужно делать на кухне, а чего ни в коем случае нельзя!</string>
    <string name="tb4">
НУЖНО:

Мыть руки, овощи и фрукты перед приготовлением.

Подготовить все оборудование.

Быть в хорошем настроении.

Предупредить родителей, что собираешься что-то готовить.

Проверить срок годности продуктов, их состояние.

Надеть одежду, которую можно пачкать.

НЕЛЬЗЯ:

Использовать при подогреве в микроволновой печи посуду с золотым покрытием, ложки и блестящие упаковочные материалы.

Трогать выключатели, розетки и шнуры мокрыми руками.

Неаккуратно использовать продукты: разливать или рассыпать.

Пробовать не готовое блюдо.</string>
    <string name="text1Abc">Рад тебя видеть!</string>
    <string name="text2Abc">Поскольку мы первый раз с тобой на кухне, давай выучим все необходимые приборы, которые нам могут пригодиться!</string>
    <string name="text3Abc">Любой настоящий повар должен знать как называются его инструменты!</string>
    <string name="text4Abc">Отлично, ты большой молодец!</string>
    <string name="text5Abc">А теперь, когда мы знаем названия основных кухонных приборов, давай научимся готовить! Ведь мы с тобой здесь только для этого! Начнем мы с тобой с приготовления горячих блюд.</string>
    <string name="text6Abc">Для приготвления любого горячего блюда нам понадобится плита, я уверен, что у тебя дома она имеется!</string>
    <string name="text7Abc">Плитой нужно пользоваться крайне осторожно! Позови кого-нибудь из взрослых, чтобы они проследили за соблюдением техники безопасности.</string>
    <string name="text8Abc">Для приготовления любого горячего блюда нам потребуется сковорода.</string>
    <string name="text9Abc">Абсолютно каждая сковорода имеет лучшего друга-Растительное(подсолнечное) масло! Не путай его со сливочным! Без него твое блюдо просто напросто сгорит. Налей его на сковородку и включи огонь.</string>
    <string name="text10Abc">Ни в коем случае не брызгай на раскаленную сковородку с маслом водой!</string>
    <string name="text11Abc">Отлично! Теперь ты знаешь как работать с плитой и сковородой! Давай с тобой что-нибудь приготовим, я тебе в этом помогу! </string>
    <string name="text12Abc">Мы с тобой будем готовить завтрак для твоих родителей, они очень обрадуются твоей самостоятельности и твоим умениям!</string>
    <string name="text13Abc">Вот что мы будем готовить</string>
    <string name="text14Abc">Ингредиенты:</string>
</resources>