<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tb"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tblis"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="#ffffff" />
            <ImageView
                android:layout_width="178dp"
                android:layout_height="183dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/lisapovar" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tb1"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tbtb"
                android:textSize="33sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tbogog"
                android:textSize="28sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbogog1"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="232dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ogog" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbogog2"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="232dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ojogruki" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbogog3"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="232dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ojogodegda" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbogog4"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="232dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ojogmarlya" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbogog5"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tbpogar"
                android:textSize="28sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="232dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/pogarkuh" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbpogar1"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="232dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/pogartel" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbpogar2"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="232dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/pogarris"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbpogar3"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="232dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/pogarokno"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbpogar4"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="232dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/pogardver" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbend"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbend1"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>
            <ImageView
                android:layout_width="178dp"
                android:layout_height="183dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/lisapovar" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>