<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tb"
                android:textSize="35sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#212121"
                android:layout_marginTop="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tblis"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="#212121" />

            <ImageView
            android:layout_width="178dp"
            android:layout_height="183dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/lisapovar" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbmid"
                android:textSize="25sp"
                android:textColor="#757575"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"/>

            <ImageView
                android:layout_width="160dp"
                android:layout_height="219dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/minion1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tb4"
                android:textSize="25sp"
                android:textColor="#757575"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:layout_marginTop="20sp"/>

            <ImageView
                android:layout_width="208dp"
                android:layout_height="219dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/minion" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbmid1"
                android:textSize="25sp"
                android:textColor="#757575"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:layout_marginTop="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tbmid2"
                android:textSize="25sp"
                android:textColor="#757575"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:layout_marginTop="10sp"/>
            <ImageView
                android:layout_width="178dp"
                android:layout_height="183dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/lisapovar" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Поехали!"
                android:textSize="30sp"
                android:textColor="#212121"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="16sp"/>



        </LinearLayout>
    </ScrollView>
</LinearLayout>